Edit Colors and Socials

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #932097;
-$secondary-color: #bf19ce;
+$primary-color: #522153;
+$secondary-color: #aa23b6;
 
 $white-color: #fff;
 
